--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,7 +1,6 @@
 .footer{
-   position:absolute;
    width:100%;
-   bottom:0;
+   position: relative;
 }
 
 progress{
